[gd_scene load_steps=24 format=2]

[ext_resource path="res://Assets/UI/charinfoweaponframe.png" type="Texture" id=1]
[ext_resource path="res://UI/StatInfo.tscn" type="PackedScene" id=2]
[ext_resource path="res://UI/CharInfoContainer.gd" type="Script" id=3]
[ext_resource path="res://Assets/Characters/Maria/mariaspritesheet_v002_no_srgb.png" type="Texture" id=4]
[ext_resource path="res://Characters/Maria/Assets/calli_spritesheet.png" type="Texture" id=5]

[sub_resource type="StyleBoxEmpty" id=18]

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 300, 300 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 5 )
region = Rect2( 300, 0, 300, 300 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 5 )
region = Rect2( 600, 0, 300, 300 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 5 )
region = Rect2( 900, 0, 300, 300 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 1800, 2880, 360, 360 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 2160, 2880, 360, 360 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 2520, 2880, 360, 360 )

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 2880, 2880, 360, 360 )

[sub_resource type="AtlasTexture" id=23]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 3240, 2880, 360, 360 )

[sub_resource type="AtlasTexture" id=24]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 3600, 2880, 360, 360 )

[sub_resource type="AtlasTexture" id=25]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 3960, 2880, 360, 360 )

[sub_resource type="AtlasTexture" id=26]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 3240, 360, 360 )

[sub_resource type="AtlasTexture" id=27]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 360, 3240, 360, 360 )

[sub_resource type="AtlasTexture" id=28]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 720, 3240, 360, 360 )

[sub_resource type="AtlasTexture" id=29]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 1080, 3240, 360, 360 )

[sub_resource type="AtlasTexture" id=30]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 1440, 3240, 360, 360 )

[sub_resource type="SpriteFrames" id=13]
animations = [ {
"frames": [ SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ) ],
"loop": true,
"name": "Calli_idle",
"speed": 5.0
}, {
"frames": [ SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ) ],
"loop": true,
"name": "Maria_idle",
"speed": 12.0
}, {
"frames": [  ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="CharInfoContainer" type="VBoxContainer"]
margin_left = 379.0
margin_right = 1880.0
margin_bottom = 1040.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 4.0
custom_constants/separation = 20
script = ExtResource( 3 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 1501.0
margin_bottom = 690.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
custom_constants/separation = 50

[node name="CenterContainer" type="CenterContainer" parent="HBoxContainer"]
margin_right = 661.0
margin_bottom = 690.0
rect_min_size = Vector2( 650, 650 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Panel" type="Panel" parent="HBoxContainer/CenterContainer"]
margin_left = 5.0
margin_top = 20.0
margin_right = 655.0
margin_bottom = 670.0
rect_min_size = Vector2( 650, 650 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 18 )

[node name="Control" type="Control" parent="HBoxContainer/CenterContainer"]
margin_left = 330.0
margin_top = 345.0
margin_right = 330.0
margin_bottom = 345.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CenterContainer" type="CenterContainer" parent="HBoxContainer/CenterContainer/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CharSprite" type="AnimatedSprite" parent="HBoxContainer/CenterContainer/Control/CenterContainer"]
scale = Vector2( 1.8, 1.8 )
frames = SubResource( 13 )
animation = "Maria_idle"
frame = 9
playing = true

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 711.0
margin_right = 1501.0
margin_bottom = 690.0

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/VBoxContainer"]
margin_right = 790.0
margin_bottom = 431.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="CenterContainer2" type="CenterContainer" parent="HBoxContainer/VBoxContainer/MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 770.0
margin_bottom = 411.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/VBoxContainer/MarginContainer/CenterContainer2"]
margin_right = 750.0
margin_bottom = 391.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HP" parent="HBoxContainer/VBoxContainer/MarginContainer/CenterContainer2/VBoxContainer" instance=ExtResource( 2 )]

[node name="ATT" parent="HBoxContainer/VBoxContainer/MarginContainer/CenterContainer2/VBoxContainer" instance=ExtResource( 2 )]
margin_top = 79.0
margin_bottom = 154.0

[node name="DEX" parent="HBoxContainer/VBoxContainer/MarginContainer/CenterContainer2/VBoxContainer" instance=ExtResource( 2 )]
margin_top = 158.0
margin_bottom = 233.0

[node name="DEF" parent="HBoxContainer/VBoxContainer/MarginContainer/CenterContainer2/VBoxContainer" instance=ExtResource( 2 )]
margin_top = 237.0
margin_bottom = 312.0

[node name="LUCK" parent="HBoxContainer/VBoxContainer/MarginContainer/CenterContainer2/VBoxContainer" instance=ExtResource( 2 )]
margin_top = 316.0
margin_bottom = 391.0

[node name="MarginContainer2" type="MarginContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 435.0
margin_right = 790.0
margin_bottom = 690.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="Panel" type="Panel" parent="HBoxContainer/VBoxContainer/MarginContainer2"]
margin_left = 20.0
margin_top = 20.0
margin_right = 770.0
margin_bottom = 235.0

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer/MarginContainer2"]
margin_left = 20.0
margin_top = 20.0
margin_right = 770.0
margin_bottom = 235.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 50
alignment = 1

[node name="WFrameCont" type="CenterContainer" parent="HBoxContainer/VBoxContainer/MarginContainer2/HBoxContainer"]
margin_left = 135.0
margin_right = 350.0
margin_bottom = 215.0

[node name="WeaponFrame" type="TextureRect" parent="HBoxContainer/VBoxContainer/MarginContainer2/HBoxContainer/WFrameCont"]
margin_right = 215.0
margin_bottom = 215.0
texture = ExtResource( 1 )

[node name="WIconCont" type="CenterContainer" parent="HBoxContainer/VBoxContainer/MarginContainer2/HBoxContainer/WFrameCont/WeaponFrame"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -107.5
margin_top = -107.5
margin_right = 107.5
margin_bottom = 107.5

[node name="WeaponIcon" type="TextureRect" parent="HBoxContainer/VBoxContainer/MarginContainer2/HBoxContainer/WFrameCont/WeaponFrame/WIconCont"]
margin_left = 107.0
margin_top = 107.0
margin_right = 107.0
margin_bottom = 107.0

[node name="AFrameCont" type="CenterContainer" parent="HBoxContainer/VBoxContainer/MarginContainer2/HBoxContainer"]
margin_left = 400.0
margin_right = 615.0
margin_bottom = 215.0

[node name="AbilityFrame" type="TextureRect" parent="HBoxContainer/VBoxContainer/MarginContainer2/HBoxContainer/AFrameCont"]
margin_right = 215.0
margin_bottom = 215.0
texture = ExtResource( 1 )

[node name="AIconCont" type="CenterContainer" parent="HBoxContainer/VBoxContainer/MarginContainer2/HBoxContainer/AFrameCont/AbilityFrame"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -107.5
margin_top = -107.5
margin_right = 107.5
margin_bottom = 107.5
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="AbilityIcon" type="TextureRect" parent="HBoxContainer/VBoxContainer/MarginContainer2/HBoxContainer/AFrameCont/AbilityFrame/AIconCont"]
margin_left = 107.0
margin_top = 107.0
margin_right = 107.0
margin_bottom = 107.0

[node name="HBoxContainer2" type="HBoxContainer" parent="."]
margin_top = 710.0
margin_right = 1501.0
margin_bottom = 1040.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 50
alignment = 1

[node name="WIconCont" type="CenterContainer" parent="HBoxContainer2"]
margin_left = 378.0
margin_right = 593.0
margin_bottom = 330.0

[node name="WeaponIcon" type="TextureRect" parent="HBoxContainer2/WIconCont"]
margin_top = 57.0
margin_right = 215.0
margin_bottom = 272.0
texture = ExtResource( 1 )

[node name="WIconCont2" type="CenterContainer" parent="HBoxContainer2"]
margin_left = 643.0
margin_right = 858.0
margin_bottom = 330.0

[node name="WeaponIcon" type="TextureRect" parent="HBoxContainer2/WIconCont2"]
margin_top = 57.0
margin_right = 215.0
margin_bottom = 272.0
texture = ExtResource( 1 )

[node name="WIconCont3" type="CenterContainer" parent="HBoxContainer2"]
margin_left = 908.0
margin_right = 1123.0
margin_bottom = 330.0

[node name="WeaponIcon" type="TextureRect" parent="HBoxContainer2/WIconCont3"]
margin_top = 57.0
margin_right = 215.0
margin_bottom = 272.0
texture = ExtResource( 1 )

[editable path="HBoxContainer/VBoxContainer/MarginContainer/CenterContainer2/VBoxContainer/HP"]
[editable path="HBoxContainer/VBoxContainer/MarginContainer/CenterContainer2/VBoxContainer/ATT"]
[editable path="HBoxContainer/VBoxContainer/MarginContainer/CenterContainer2/VBoxContainer/DEX"]
[editable path="HBoxContainer/VBoxContainer/MarginContainer/CenterContainer2/VBoxContainer/DEF"]
[editable path="HBoxContainer/VBoxContainer/MarginContainer/CenterContainer2/VBoxContainer/LUCK"]
